fixxed spacing issue one profile list page

--- a/src/app/profile-list/profile-list.component.scss
+++ b/src/app/profile-list/profile-list.component.scss
@@ -54,7 +54,7 @@ $siriusBlue: #1a237e ;
     background-color: transparent;
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+    justify-content: flex-start;
     padding-top: 15px;
     text-align: left;
     padding-left: 5px;
@@ -63,7 +63,7 @@ $siriusBlue: #1a237e ;
 
 .profileListAvatar {
   img {
-    padding-top: 10px;
+    padding-right: 10px;
     border-radius: 50%;
   }
 }
@@ -89,6 +89,7 @@ $siriusBlue: #1a237e ;
       height: 200px;
       padding-top: 15px;
       text-align: center;
+      justify-content: center;
       padding-left: 5px;
     }
   }
